<resources>
    <string name="app_name">Pavlin</string>
    <string name="emailPlaceholder">email</string>
    <string name="typeQuestion">Type your yes/no question here</string>
    <string name="passwordPlaceholder">password</string>
    <string name="submitQuestionButton">Submit</string>
    <string name="settingsButton">Настройки</string>
    <string name="aboutButton">About</string>
    <string name="get_started">Начать</string>
    <string name="login">Войти</string>
    <string name="registration_link">Ещё не зарегистрированы?</string>
    <string name="upload_avatar">Загрузить фото профиля</string>
    <string name="username">Имя пользователя</string>
    <string name="signInButtonName">Sign In</string>
    <string name="signUpButtonName">Sign Up</string>
    <string name="LogoutButtonMenu">Выйти</string>
    <string name="yesButton">Yes</string>
    <string name="noButton">No</string>
    <string name="homeButtonName">Home</string>
    <string name="searchButtonName">поиск</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="ThreeWords">Опиши меня в трех словах</string>
    <string name="hint1">Первое слово..</string>
    <string name="hint2">Второе слово..</string>
    <string name="hint3">Третье слово..</string>
    <string name="saveButton">Сохранить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="login_suggestion">Войдите для того чтобы люди могли оставлять мнения о вас</string>
    <string name="choose_opinion">Выберите мнение, которым хотите поделиться</string>
    <string name="share_on_instagram">Поделиться</string>
    <string name="anonymous">анонимно</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
