<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/lifee">
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.makeramen.roundedimageview.RoundedImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profileImageHome"
            android:src="@drawable/profile_pic"
            app:riv_corner_radius="30dip"
            app:riv_border_width="5dip"
            android:layout_height="100dp"
            android:layout_width="100dp"
            app:riv_border_color="#fff"
            app:riv_mutate_background="true"
            app:riv_tile_mode="repeat"
            app:riv_oval="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/usernameTextHome"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#363147"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#c6cbcf"
            android:layout_marginTop="10dp">
        </View>

        <customfonts.MyTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThreeWords"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#8b8a8d"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="15sp"
                android:padding="16dp"
                android:textColorHint="#73787b"
                android:id="@+id/firstEditText"
                android:hint="@string/hint1"/>

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="15sp"
                android:padding="16dp"
                android:layout_marginTop="10dp"
                android:textColorHint="#73787b"
                android:id="@+id/secondEditText"
                android:hint="@string/hint2"/>

            <customfonts.MyEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:textSize="15sp"
                android:padding="16dp"
                android:layout_marginTop="10dp"
                android:textColorHint="#73787b"
                android:id="@+id/thirdEditText"
                android:hint="@string/hint3"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="?android:attr/buttonBarButtonStyle"
                android:gravity="center"
                android:layout_gravity="end"
                android:id="@+id/saveButton"
                android:text="@string/saveButton"
                />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>