<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/card_view"
        card_view:cardBackgroundColor="#ffffff"
        android:layout_gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        card_view:cardElevation="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="match_parent"
                android:layout_height="25dp">
            </View>

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:id="@+id/profileImageHome"
                android:src="@drawable/profile_pic"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/app_name"
                android:textSize="28sp"
                android:layout_gravity="center"
                android:id="@+id/usernameTextHome"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp">
            </View>

            <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:minHeight="100dp"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:id="@+id/questionEditText"-->
            <!--android:inputType="textMultiLine"-->
            <!--android:hint="@string/typeQuestion"-->
            <!--android:gravity="center"/>-->
            <!--<Button-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/submitQuestionButton"-->
            <!--android:layout_marginLeft="30dp"-->
            <!--android:layout_marginRight="30dp"-->
            <!--android:text="@string/submitQuestionButton"/>-->

        </LinearLayout>

    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThreeWords"
            android:textSize="25sp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:minHeight="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/hint1"
            android:layout_marginBottom="8dp"
            android:id="@+id/firstEditText"
            android:maxLength="25"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:minHeight="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/hint2"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:id="@+id/secondEditText"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_style"
            android:minHeight="40dp"
            android:textSize="20sp"
            android:gravity="center"
            android:hint="@string/hint3"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:id="@+id/thirdEditText"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="?android:attr/buttonBarButtonStyle"
            android:gravity="center"
            android:layout_gravity="right"
            android:id="@+id/saveButton"
            android:text="@string/saveButton"
            />
    </LinearLayout>

</LinearLayout>
