<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.n17r_fizmat.kzqrs.ShareActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:id="@+id/linear_share"
        android:layout_width="350dp"
        android:layout_height="350dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/lifee">
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:src="@drawable/instagram2"
                android:gravity="center"
                android:contentDescription="@string/share_on_instagram" />

            <com.makeramen.roundedimageview.RoundedImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/share_profile"
                android:layout_weight="1"
                android:src="@drawable/profile_pic"
                app:riv_corner_radius="30dip"
                app:riv_border_width="5dip"
                android:layout_height="100dp"
                android:layout_width="100dp"
                app:riv_border_color="#fff"
                app:riv_mutate_background="true"
                app:riv_tile_mode="repeat"
                app:riv_oval="true"
                android:layout_gravity="center">
            </com.makeramen.roundedimageview.RoundedImageView>

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_weight="1"
                android:layout_gravity="bottom"
                android:layout_marginBottom="8dp"
                android:src="@drawable/settings4"
                android:contentDescription="@string/settingsButton" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:id="@+id/share_username"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#363147"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#c6cbcf"
            android:layout_marginTop="10dp">
        </View>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ThreeWords"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="#8b8a8d"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:background="#c6cbcf">
        </View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:src="@drawable/login_page"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="left">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Pavlin"
                        android:layout_gravity="center"
                        android:textSize="24sp"
                        android:textColor="#363147"
                        android:textStyle="bold"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="- найди правду о себе"
                        android:textSize="16sp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:textColor="#363147"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="bit.ly/get_pavlin"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="left"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
    </View>

    <Button
        android:id="@+id/share_insta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradiant"
        android:padding="16dp"
        android:text="@string/share_on_instagram"
        android:textSize="15sp"
        android:gravity="center"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        />


</LinearLayout>
